--- a/teste01.html
+++ b/teste01.html
@@ -16,7 +16,11 @@
   </style>
 </head>
 <body>
-   <h1 style="text-align:center;">Aula de Git</h1>
+   <h1 style="text-align:center;">
+      <i>
+        <mark>Aula de Git</mark>
+      </i>
+   </h1>
    <h2>Pontos Principais</h2>
    <p>Como configurar e instalar <strong>Git</strong> e utilizando o Sublime Text 3, utilazar na pratica a teoria, mas é recomendavel o Atom</p>
    <a href="https://www.ifpb.edu.br/">
